Added Team Section

--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -67,15 +67,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h5>LOCATION</h5>
-                        <p>Osun Startup Hub,
-                            Tech Drive way,
-                            Osogbo,
-                            Osun State.</p>
+                        <p>{{page_data.location}}</p>
                     </div>
                     <div class="col-lg-12">
                         <h5>MAIL US</h5>
-                        <p>osunstartuphub@
-                            gmail.com</p>
+                        <p>{{page_data.email}}</p>
                     </div>
                     <div class="col-lg-12">
                         <span><img src="{% static 'images/logo.png' %}" alt="aboutgithub"
