--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -45,7 +45,7 @@
     <div class="my_container">
         <div class="row">
             <div class="col-lg-6">
-                <h3>{{page_data.team_text}}</h3>
+                <h3>{{page_data.team_text|safe}}</h3>
                 <a data-aos="flip-up">Meet the Team</a>
             </div>
 
